# vpnctrl

./: Cargo.toml  README.md  crates.js  docker-compose.yml  help.html  index.html  search-index.js  settings.html  source-files.js
api/: Cargo.toml  Dockerfile  Rocket.toml  all.html  constant.MIGRATIONS.html  fn.graphiql.html  fn.graphql_query.html  fn.graphql_request.html  fn.launch.html  fn.main.html  index.html  sidebar-items.js  struct.CheckForDebug.html  struct.SkipGraphiQL.html  struct.graphiql.html  struct.graphql_handler.html
api/auth/: index.html  sidebar-items.js  struct.AdminGuard.html  struct.ApiKey.html  struct.ClientGuard.html  struct.ServerGuard.html
api/auth/jwt/: fn.encode_jwt.html  fn.valid_token.html  index.html  sidebar-items.js  struct.Claims.html  struct.Secret.html
api/database/: index.html  sidebar-items.js  struct.DatabaseConn.html  type.DatabaseConnection.html  type.DatabasePool.html
api/models/: index.html  sidebar-items.js  struct.QueryRoot.html  type.WireguardSchema.html
api/models/client/: index.html  struct.Client.html  struct.NewClient.html
api/models/dns_server/: index.html  sidebar-items.js  struct.DnsServer.html  struct.NewDnsServer.html
api/schema/: fn.build_schema.html  fn.get_db_connection.html  index.html  sidebar-items.js  type.WireguardSchema.html
api/src/: auth.rs  database.rs  main.rs
cli/: Cargo.toml  schema.json
cli/graphql_queries/: generate_keypair.graphql  information_new_client.graphql  login.graphql  new_client.graphql
cli/src/: main.rs
client/: Cargo.toml  all.html  enum.Type.html  fn.client_configuration_query.html  fn.get_and_write_wg_config.html  fn.get_request.html  fn.main.html  fn.server_configuration_query.html  index.html  schema.json  sidebar-items.js  struct.Arguments.html  struct.Configuration.html
client/client_configuration/: index.html  sidebar-items.js  struct.ClientConfiguration.html
client/queries/: client_configuration.graphql  server_configuration.graphql
client/server_configuration/: index.html  sidebar-items.js  struct.ServerConfiguration.html
client/src/: client_configuration.rs  main.rs  server_configuration.rs
libwgbuilder/: Cargo.toml  all.html  enum.Error.html  index.html  sidebar-items.js
libwgbuilder/error/: enum.Error.html  index.html
libwgbuilder/models/: index.html  sidebar-items.js  trait.Model.html
libwgbuilder/schema/: index.html  sidebar-items.js
libwgbuilder/src/: error.rs  lib.rs  schema.rs
libwgbuilder/templates/: client_configuration.stpl  server_configuration.stpl
ui/: package.json  (+1 more)
(+364 files in other folders)
