[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", default-features = false }
async-graphql = "4"
async-graphql-rocket = "5.0.1"
libwgbuilder = { path = "../libwgbuilder" }
diesel = { version = "2.0.1", features = ["r2d2"] }
anyhow = "1.0.65"
bcrypt = "0.13"
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
chrono = "0.4.19"
diesel_migrations = "2.0.0"
rocket_cors = "0.6.0-alpha1"