[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.26.0", features=["full"] }
poem = "1.3.55"
async-graphql = "5"
async-graphql-poem = "5.0.6"
libwgbuilder = { path = "../libwgbuilder" }
diesel = { version = "2.0.1", features = ["r2d2"] }
anyhow = "1.0.65"
bcrypt = "0.14"
jsonwebtoken = "8"
serde = {version = "1.0", features = ["derive"] }
chrono = "0.4.19"
diesel_migrations = "2.0.0"