[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.12", features = ["reqwest-blocking"] }
inquire = "0.6.0"
anyhow = "1.0"
once_cell = "1.17"
serde = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }