[package]
name = "libwgbuilder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "chrono"] }
thiserror = "1.0.37"
anyhow = "1.0.65"
sailfish = "0.6"
chrono = "0.4"
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
bcrypt = "0.14"
